form, 조회기간 수정전

--- a/pageapp/templates/main/arready.html
+++ b/pageapp/templates/main/arready.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
- 
 </head>
 <body>
-    <a href ="{% url 'pageapp:login'%}">로그인</a>
-    <a href ="{% url 'joinFormapp:show_joinForm'%}">폼 작성</a>
+
+<h1>아직 조회 기간이 아닙니다.</h1>
+
 </body>
 </html>
