--- a/joinFormapp/templates/joinFormapp/application_form.html
+++ b/joinFormapp/templates/joinFormapp/application_form.html
@@ -1,4 +1,5 @@
 <!-- application_form.html -->
+{% load static %}
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
