--- a/pageapp/templates/bemore_intro/introduce.html
+++ b/pageapp/templates/bemore_intro/introduce.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="{% static 'css/media_intro.css' %}">
     <link rel="stylesheet" href="{% static 'css/navbar.css'%}">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="{% static 'js/mNav.js' %}"></script>
+    <script defer src="{% static 'js/mNav.js' %}"></script>
 </head>
 <body>
     <img src="{% static 'img/back.png' %}" class="background">
     <!-- 네비바 -->
     <div id="navbar">
-        <div class="nav_logo"><i><a href="start.html">BEMORE+</a></i></div>
+        <div class="nav_logo"><i><a href="{% url 'pageapp:index'%}">BEMORE+</a></i></div>
         <div class="mNav">
             <div class="icon_wrap">
                 <div class="icon"></div>
