--- a/pageapp/templates/result/pass.html
+++ b/pageapp/templates/result/pass.html
@@ -7,14 +7,15 @@
     <title>Sorry..</title>
     <link rel="stylesheet" href="{% static 'css/common.css' %}">
     <link rel="stylesheet" href="{% static 'css/navbar.css'%}">
+    <link rel="stylesheet" href="{% static 'css/result.css'%}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="{% static 'js/mNav.js' %}"></script>
+    <script defer src="{% static 'js/mNav.js' %}"></script>
 </head>
 <body>
-    <img src="{% static 'img/back.png' %}" class="background">
+    <div clas="bg"> <img src="{% static 'img/back.png' %}" class="background"></div>
     <!-- 네비바 -->
     <div id="navbar">
-        <div class="nav_logo"><i><a href="start.html">BEMORE+</a></i></div>
+        <div class="nav_logo"><i><a href="{% url 'pageapp:index'%}">BEMORE+</a></i></div>
         <div class="mNav">
             <div class="icon_wrap">
                 <div class="icon"></div>
