--- a/joinFormapp/templates/joinFormapp/application_form.html
+++ b/joinFormapp/templates/joinFormapp/application_form.html
@@ -1,7 +1,74 @@
-<!-- application_form.html -->
+<!-- application_form.html 
 {% load static %}
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">제출</button>
 </form>
+-->
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JoinUs</title>
+    <link rel="stylesheet" href="{% static 'css/common.css' %}">
+    <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
+    <link rel="stylesheet" href="{% static 'css/media_join.css' %}">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="{% static 'js/mNav.js' %}"></script>
+    
+</head>
+<body>
+    <img src="{% static 'img/back.png' %}" class="background">
+    <!-- 네비바 -->
+    <div id="navbar">
+        <div class="nav_logo"><i><a href="start.html">BEMORE+</a></i></div>
+        <div class="mNav">
+            <div class="icon_wrap">
+                <div class="icon"></div>
+            </div>
+        </div>
+        <ul class="nav_menu">
+            <li><div><a href="{% url 'joinFormapp:show_joinForm'%}">지원하기</a></div></li>
+            <li><div><a href="{% url 'pageapp:login' %}">합격자 조회</a></div></li>
+            <li><div><a href="{% url 'pageapp:intro' %}">동아리 소개</a></div></li>
+            <li><div><a href="{% url 'pageapp:act' %}">동아리 활동</a></div></li>
+        </ul>
+    </div>
+    {% if messages %}
+        <ul class="messages">
+        {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    <div class="container">
+        <form action="{% url 'joinFormapp:show_joinForm' %}" method="POST">
+            {% csrf_token %}
+            <div class="formbox">
+            <label for="name">이름</label>
+            <input type="text" id="name" name="name" required><br>
+
+            <label for="phone_number">전화번호</label>
+            <input type="tel" id="phone" name="phone_number" required><br>
+
+            <label for="introduction">자기소개</label>
+            <textarea id="introduction" name="introduction" rows="4" required></textarea><br>
+
+            <label for="motivation">지원동기</label>
+            <textarea id="motivation" name="motivation" rows="4" required></textarea><br>
+            <label for="activity_attachment">활동자료</label>
+            <input type="file" id="paper1" name="activity_attachment" required><br>
+
+            <label for="github_or_tistory">깃허브/티스토리</label>
+            <input type="text" id="paper2" name="github_or_tistory" required><br>
+        </div>
+        <div class="bt_box">
+            <input type="submit" id="bt_sub" value="SUBMIT">
+            <!--<button type="submit" id="bt_sub">SUBMIT</button>-->
+        </div>
+        </form>
+    </div> 
+</body>
+</html>
