--- a/static/css/start_animation.css
+++ b/static/css/start_animation.css
@@ -3,38 +3,31 @@
     animation: blur 3s ease-out forwards;
     animation-delay:1s;
   }
-  /* 네비바 */
-  .navbar {
-    width: 100%;
-    color: white;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    box-sizing: border-box;
-    padding: 15px 12px;
-    position: fixed;
-    top: 0;
-    animation: fadeIn 3s ease 1s forwards; /* 애니메이션 적용 */
-    opacity: 0;
-  }
-  .navbar a{
-    text-decoration: none;
-    color: inherit;  
-  }
-  .navbar::after {
-    content: "";
-    display: block;
-    height: 1px;
-    background: linear-gradient(to left, hsla(189, 72%, 93%, 0.664), rgba(76, 90, 97, 0.664) 80%);
-    position: absolute;
-    bottom: 0;
-    left: 27px; 
-    right: 27px; 
-  }
+/* 화면 스크롤하면 나타나는 네비바 */
+html{
+  overflow: hidden;
+}
+body{
+  display: block;
+  width: 100%;
+  height: 100%;
+  margin:0;
+}
+section{
+  height: calc(100vh - 33px);
+  width: 100%;
+  position: relative;
+}
   /* 메인페이지 시작 문구 */
   .nav_logo i{
     padding: 15px;
     font-size: 2.5vmin;
+  }
+  
+  #section1 {
+    position: relative;
+    top: 100px;
+    left: 0;
   }
   .eng {
     opacity: 1;
@@ -44,11 +37,6 @@
     opacity: 0;
     transform: translatey(-100%) translateX(5%);
     transition: opacity 3s ease-in-out;
-  }
-  #intro {
-    position: relative;
-    top: 100px;
-    left: 150px;
   }
   .eng h1 {
     font-size: 13vmin;
@@ -71,15 +59,8 @@
     font-size: 2.5vmin;
     margin-bottom: 5px;
   }
-/* 화면 스크롤하면 나타나는 네비바 */
-html{
-  overflow: hidden;
-}
-section{
-  height: 100vh; /* 100% of the viewport height */
-  width: 100%;
-  position: relative;
-}
+
+
 .start_link {
   position: absolute;
   text-align: center;
@@ -88,6 +69,7 @@ section{
 }
 .start_link ul {
   list-style:none;
+  padding: 0;
 }
 .start_link li{
   margin-top: 100px;
@@ -95,10 +77,14 @@ section{
 .start_link a {
   padding: 15px;
   text-decoration: none;
-  font-size: 3vmin;
+  font-size: 15px;
   color: inherit;
   
 }
+  /* 네비바 */
+  #navbar{
+    display: none;
+  }
 
 /* 블러, 네비바 애니메이션 */
 @keyframes blur {
@@ -117,6 +103,42 @@ section{
     opacity: 1;
   }
 }
-@media screen and (max-width:900px){
-  .navbar{display: none;}
+
+
+@media screen and (max-width:900px){  
+  /* 시작화면 문구 */
+  .ko{
+    position: relative;
+    top: 470px;
+    left:40px;
+  }
+  .eng{
+    opacity: 1;
+    animation: none;
+  }
+  .eng h1 {
+    font-size: 65px;
+    font-weight: 500;
+    text-shadow: -3px 0 0 black;
+    text-align: center;
+  }
+  .eng p {
+    display: none;
+  }
+  .ko h1 {
+    font-size: 35px;
+    margin-top:50px;
+  }
+  .ko h2 {
+    font-size: 17px;
+    margin-top:5px;
+    margin-bottom: 10px;
+  }
+  .ko h3 {
+    font-size: 17px;
+    margin-bottom: 5px;
+    font-weight: 250;
+  }
+  
+  
 }
